# chat2dutch

./: LICENSE  README.md  app_main.py  chat_interface.py  create_dict.py  download_frequency.py  download_words.py  dutch_word_frequency.csv  language_learning_manager.py  profile_setting.db  profile_settings.json  pyproject.toml  readme.md  search_history.csv  test.py  user_profile_setting.py
